Assets/styles.css
* {
    box-sizing: border-box;
    margin: 7px;
    padding: 1px;
    background-color:rgb(0, 0, 0);
    color: white;
    background-image: url(./images/orion-gf2e3dd8de_1920.jpg);
}

#projects {
    display: flex;
    flex-direction: column;
}

#projects a {
    /* flex-basis: 50%;
    justify-content: flex-end;
    align-items: end;
    height: 200px; */
    outline: 1px solid red;
}

#Project1 {
    flex-basis: 100%;
    height: 550px;
}

#Project1 div {
    background-image: url(./images/andy-holmes-jo07ANyt7Aw-unsplash.jpg);
    height: 550px;
    background-size: cover;
    background-position: center;
}

#Project2 div {
    background-image: url(./images/billy-huynh-W8KTS-mhFUE-unsplash.jpg);
    height: 200px;
    background-size: cover;
    background-position: center;
}

#Project3 div {
    background-image: url(./images/leandra-rieger-31p65jYy7gE-unsplash.jpg);
    height: 200px;
    background-size: cover;
    background-position: center;
}

#Project4 div {
    background-image: url(./images/michael-aPOlpOWdHic-unsplash.jpg);
    height: 200px;
    background-size: cover;
    background-position: center;
}

#Project5 div {
    background-image: url(./images/billy-huynh-W8KTS-mhFUE-unsplash.jpg);
    height: 200px;
    background-size: cover;
    background-position: center;
}

.row {
    width: 100%;
    display: flex;
    flex-direction: row;
    outline: 1px solid blue;
    justify-content: space-between;
}

.row a {
    width: 50%;
}

p {
    padding: 0px 30px 10px 30px;
}

